feat(dns): add interactive wizards for complex DNS record types, closes #685

--- a/templates/default/batch_ptr_record.html
+++ b/templates/default/batch_ptr_record.html
@@ -246,4 +246,4 @@
     });
 </script>
 
-<script src="assets/textareaAutoResize.js?time={{ file_version }}"></script>
+<script src="{{ base_url_prefix }}/assets/textareaAutoResize.js?time={{ file_version }}"></script>
