--- a/templates/default/edit_record.html
+++ b/templates/default/edit_record.html
@@ -201,4 +201,4 @@
         checkCnameRootWarning();
     });
 </script>
-<script src="assets/textareaAutoResize.js?time={{ file_version }}"></script>
+<script src="{{ base_url_prefix }}/assets/textareaAutoResize.js?time={{ file_version }}"></script>
