--- a/templates/modern/add_record.html
+++ b/templates/modern/add_record.html
@@ -348,4 +348,4 @@
     });
 </script>
 
-<script src="assets/textareaAutoResize.js?time={{ file_version }}"></script>
+<script src="{{ base_url_prefix }}/assets/textareaAutoResize.js?time={{ file_version }}"></script>
