--- a/templates/modern/batch_ptr_record.html
+++ b/templates/modern/batch_ptr_record.html
@@ -246,4 +246,4 @@
     });
 </script>
 
-<script src="assets/textareaAutoResize.js?time={{ file_version }}"></script>
+<script src="{{ base_url_prefix }}/assets/textareaAutoResize.js?time={{ file_version }}"></script>
