--- a/templates/modern/bulk_record_add.html
+++ b/templates/modern/bulk_record_add.html
@@ -124,4 +124,4 @@
     </div>
 </div>
 
-<script src="assets/textareaAutoResize.js?time={{ file_version }}"></script>
+<script src="{{ base_url_prefix }}/assets/textareaAutoResize.js?time={{ file_version }}"></script>
